Added model tienda

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -35,8 +35,7 @@
         %a{:href => "#", :title => "trabaja con nosotros"}
           TRABAJA CON NOSOTROS
       %li
-        %a{:href => "#", :title => "tiendas"}
-          TIENDAS
+        = link_to('TIENDAS', tiendas_path, :title => "Tiendas")
       %li
         %a{:href => "#", :title => "contacto"}
           CONTACTO
