--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,19 +1,236 @@
-- title "Products"
+#content
+  .subheader
+    .left
+      %h3 BUSCA POR CATEGORÍA
+      %ul
+        %li
+          %a{:href => "#", :title => "Sof\303\241s 3+2"} Sofás 3+2
+        %li
+          %a{:href => "#", :title => "Sof\303\241s cama"} Sofás cama
+        %li
+          %a{:href => "#", :title => "Chaiselongue"} Chaiselongue
+        %li
+          %a{:href => "#", :title => "Relax"} Relax
+        %li
+          %a{:href => "#", :title => "Rinconeras"} Rinconeras
+        %li
+          %a{:href => "#", :title => "Butacas"} Butacas
+        %li
+          %a{:href => "#", :title => "Descanso"} Descanso
+        %li.last
+          %a{:href => "#", :title => "Outlet"} Outlet
+    .right
+      %img{:alt => "palsofa", :src => "images/img1.jpg"}/
+    %br.clear/
+  #body
+    .products
+      %h3.title OPORTUNIDADES
+      %ul
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li.last
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+    .products
+      %h3.title NOVEDADES
+      %ul
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li.last
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+    .products
+      %h3.title LOS MÁS VENDIDOS
+      %ul
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+        %li.last
+          %a{:href => "#", :title => "product"}
+            %img{:alt => "product", :src => "images/imgProduct.jpg"}/
+          %h3 Sofá esquinero London
+          %span.description Todos los sofás 30% off
+          .price
+            %strong € 350
+            %a{:href => "#", :title => "reservar"} reservar
+            %br.clear/
+          .comparte
+            %b Comparte en:
+            %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
+            %span l
+            %a.btnTwitter{:href => "#", :title => "facebook"} twitter
+            %span l
+            %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+      
 
-%table
-  %tr
-    %th Name
-    %th Description
-    %th Price
-    %th Other
-  - for product in @products
-    %tr
-      %td= h product.name
-      %td= h product.description
-      %td= h product.price
-      %td= h product.other
-      %td= link_to 'Show', product
-      %td= link_to 'Edit', edit_product_path(product)
-      %td= link_to 'Destroy', product, :confirm => 'Are you sure?', :method => :delete
+
+
+
+
+
+
 
 %p= link_to "New Product", new_product_path
