--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -26,8 +26,8 @@ a:hover{
 /* typography */
 body {
 	color: #8e8e8e;
-	font-family: Trebuchet MS;
-	font-size:12px;
+	font-family: Verdana;
+	font-size:11px;
 	background-color: #ffffff;
 }
 
