--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -22,7 +22,7 @@
     .right
       %img{:alt => "palsofa", :src => "images/img1.jpg"}/
     %br.clear/
-  #body
+  #bodyProducts
     .products
       %h3.title OPORTUNIDADES
       %ul
@@ -224,12 +224,6 @@
             %a.btnTwitter{:href => "#", :title => "facebook"} twitter
             %span l
             %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
-      
-
-
-
-
-
 
 
 
