--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,9 +1,7 @@
 - title "Pages"
 #slider.slideshow
-  %img{:alt => "slideshow", :src => "images/slideshow.jpg"}/
-  %img{:alt => "slideshow", :height => "384", :src => "images/img01.jpg", :width => "946"}/
-  %img{:alt => "slideshow", :height => "384", :src => "images/img2.jpg", :width => "946"}/
-  %img{:alt => "slideshow", :height => "384", :src => "images/img01.jpg", :width => "946"}/
+  - @slideshows.each do |image|
+    = image_tag(image.image.url(), :height => "384", :width => "946")
 #content
   .sobreNosotros
     .boxLeft
