added correct mail direction and fixed error in flash message

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -14,7 +14,7 @@
   %body
     #wrapper
       = render :partial => '/shared/header'
-      = flash.each do |name, msg|
+      - flash.each do |name, msg|
         = content_tag :div, msg, :id => "flash_#{name}"
       = yield
       = render :partial => '/shared/footer'
