--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -17,8 +17,7 @@
     %br.clear/
   .contentFoot
     .comboSelect
-      %form{:action => "#"}
-        = select_tienda
+      = render :partial => '/shared/selectienda'
     .newsletter
       %form{:action => "#"}
         %input#email{:name => "email", :type => "text", :value => "Tu correo @qu\303\255"}/
