--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,16 +1,23 @@
-!!!
+!!! Strict
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %title= h(yield(:title) || "Grupo Palsofa")
-    = stylesheet_link_tag 'styles', 'main', 'nivo-slider'
-    = javascript_include_tag 'jquery', 'nivo-slider'
+    = stylesheet_link_tag 'styles', 'main', 'nivo-slider', 'prettyPhoto'
+    - if(params[:action] == 'index' && params[:controller] == 'pages')
+      = javascript_include_tag 'jquery', 'nivo-slider'
+      :javascript
+        $(document).ready(function(){
+          $('#slider').nivoSlider();
+        });
+    - else
+      = javascript_include_tag 'jquery132', 'prettyPhoto'
+      :javascript
+        $(document).ready(function(){
+          $("a[rel^='prettyPhoto']").prettyPhoto();
+        });
     /[if IE 6]
       <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" />
-    :javascript
-      $(document).ready(function(){
-        $('#slider').nivoSlider();
-      });
   %body
     #wrapper
       = render :partial => '/shared/header'
