--- a/app/views/tiendas/_show.html.haml
+++ b/app/views/tiendas/_show.html.haml
@@ -6,12 +6,11 @@
   %strong Horario
   %blockquote
     = tienda.horario
-  %a.linkMaps{:href => "#", :title => "Encuentra Tu Sof\303\241 en Google Maps"}
-    Encuentra Tu Sofá en Google Maps
+  = link_to('Encuentra Tu Sofá en Google Maps', tienda.urls, :title => "Encuentra Tu Sof\303\241 en Google Maps", :class => 'linkMaps', :target => '_blank')
   %h5 Imágenes de la tienda
   %ul.listImgTiendas
     - if tienda.images.count > 0
       - tienda.images.each do |image|
-        %li= link_to(image_tag(image.image.url(:small), :class => 'block'), image.image.url())
+        %li= link_to(image_tag(image.image.url(:small), :class => 'block'), image.image.url(), :rel => "prettyPhoto[pp_gal#{tienda.id}]")
     - else
       Sin imagenes
