--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,6 +8,9 @@
       = javascript_include_tag 'jquery', 'nivo-slider'
       :javascript
         $(document).ready(function(){
+          $('#newsletter_email').focus(function(){
+            $(this).val('');
+          });
           $('#slider').nivoSlider();
         });
     - else
@@ -15,6 +18,9 @@
       :javascript
         $(document).ready(function(){
           $("a[rel^='prettyPhoto']").prettyPhoto();
+          $('#newsletter_email').focus(function(){
+            $(this).val('');
+          });
         });
     /[if IE 6]
       <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" />
